# datetime

./: CMakeLists.txt  DateTimeConfig.cmake.in  Dockerfile  README.md  makefile
.github/workflows/: test.yml
include/: datetime.h
src/: CMakeLists.txt  makefile
test/: makefile  test.bat  testcc.cc
test/testc.dSYM/Contents/Resources/DWARF/: testc
test/testcc.dSYM/Contents/Resources/DWARF/: testcc
tests/: CMakeLists.txt  test_c.c  test_datetime.cc
